<resources>
    <string name="app_name">demo</string>
    <string name="title">标题</string>
    <string name="user_center">个人中心</string>
    <string name="cancel">取消</string>

    <string name="get_order">抢单</string>
    <string name="order">订单</string>
    <string name="system_information">系统消息</string>
    <string name="verified">实名认证</string>
    <string name="my_order">我的订单</string>
    <string name="my_purse">我的钱包</string>
    <string name="setting">设置中心</string>
    <string name="rp_record">奖惩记录</string>
    <string name="map">地图</string>
    <string name="message">消息</string>
    <string name="home_page">主页</string>
    <string name="ok">好的</string>
    <string name="demo1">demo1</string>
    <string name="demo2">demo2</string>
    <string name="demo3">demo3</string>
    <string name="demo4">demo4</string>
    <string name="show">show</string>
    <string name="next">下一帧</string>
    <string name="order_detail">订单详情</string>

    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="article">计算校验和时，需要在UDP之前增加12个字节的伪首部。这种首部并不是用户数据报的真正首部。伪首部并不在网络中传输，只是在计算检验和，临时添加在UDP用户数据报前，得到一个临时的用户数据报。
UDP的校验和是把首部和数据部分一起校验，发送方计算校验和的一般步骤：

将首部的校验和字段填充为0（零）
把伪首部和用户数据报UDP看出16位的字符串连接起来
如果数据部分不是偶数字节，则填充一个全零字节（该字节不发送到网络层）
按二进制反马计算出这些16位字的和
然后将和写入校验和字段，就可以发送到网络层了。

接收方收到用户数据报后，连同伪首部一起，按二进制反码求这些16位字的和，无差错结果是应全为1.否则出错，直接丢弃该报文。
</string>
    <string name="top_pin_bar">置顶栏目</string>

</resources>
