<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/user_center"
            android:textColor="@color/white"
            android:textSize="18dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="34dp"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/portrait"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:roundAsCircle="true" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="@dimen/txtsize_subhead" />


        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSystemInformation"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/system_information"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlVerified"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/verified"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMyOrder"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/my_order"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMyPurse"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/my_purse"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/setting"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/rp_record"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>


</LinearLayout>