<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <RelativeLayout
                android:id="@+id/rl_home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/white"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/title"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textSize="13sp"
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@id/et_search"
                    android:background="@color/white" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:minHeight="100dp"
                android:text="@string/top_pin_bar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article"
                android:textSize="30sp" />

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>