<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:src="@mipmap/ic_left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_purse"
            android:textColor="@color/txt_black"
            android:textSize="18dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSystemInformation"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/system_information"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlVerified"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/verified"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMyOrder"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/my_order"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMyPurse"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/my_purse"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/setting"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/rp_record"
            android:textColor="@color/txt_black"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_more_right" />
    </RelativeLayout>


</LinearLayout>